RESOLVED FIXED190331
Adding some temporary asserts to debug a mysterious ASAN bot crash.
https://bugs.webkit.org/show_bug.cgi?id=190331
Summary Adding some temporary asserts to debug a mysterious ASAN bot crash.
Mark Lam
Reported 2018-10-06 10:50:28 PDT
Patch coming.
Attachments
proposed patch. (1.95 KB, patch)
2018-10-06 10:54 PDT, Mark Lam
no flags
Mark Lam
Comment 1 2018-10-06 10:54:43 PDT
Created attachment 351729 [details] proposed patch.
WebKit Commit Bot
Comment 2 2018-10-06 12:10:38 PDT
Comment on attachment 351729 [details] proposed patch. Clearing flags on attachment: 351729 Committed r236899: <https://trac.webkit.org/changeset/236899>
WebKit Commit Bot
Comment 3 2018-10-06 12:10:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-10-06 12:11:29 PDT
Note You need to log in before you can comment on or make changes to this bug.