Adding some temporary asserts to debug a mysterious ASAN bot crash. https://bugs.webkit.org/show_bug.cgi?id=190331

Reviewed by Filip Pizlo.

These assertions are needed because we can't reproduce the issue locally.
We'll remove these asserts after the needed data has been collected from the bot.

* wtf/StackBounds.h:
(WTF::StackBounds::checkConsistency const):


Canonical link: https://commits.webkit.org/205290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236899 268f45cc-cd09-0410-ab3c-d52691b4dbfc